@@ -4,6 +4,8 @@
  - Mark reminder as done from notification
  - Reminders can now be alarms
  - Copy group link
+ - Space widget
+ - Markdown support
 
 1.0.1
 ======
